[package]
name = "stw-game-lib"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Futymski"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
vector2d = "2.2"
vector3d = "0.2"
noise = "0.8"
rand_pcg = "0.3"
rand_seeder = "0.2"
colored = "2"
strum = "0.24"
strum_macros = "0.24"